2002-12-09  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* Split audio.h into audio.h, audioconfig.h and audiolabel.h

	* Clean ftsprivate header to be conform with current convention (no include in header)

2002-12-06  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* Split audio.c into audio.c, audioconfig.c and audiolabel.c

	* Work in progress for client<->server audio configuration communication

2002-12-03  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* Begin to merge audio and midi configuration in fts/config.c:
	- create audioconfig_type class
	- create config_type class

	* Begin to add emacs local variables for indentation to modified files

2002-11-29  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* changed hashtable.[ch]: hashtables now accept keys of any type. A class can set its
	hash function and equality function that are used if hashtable key is an object.

2002-11-21  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* first setup for multi rpm building
	
	* add config.h, config-ac.h.in (autoconf), config-win32.h (windows) and config-macosx.h (macosX) for system dependant configuration of installed package headers
	
	* add a configure flag to disable jMax java compilation (--disable-java-part or --enable-java-part=no)

	* remove java test if jMax java compilation is disabled

2002-11-14  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* commited first version of Python FTS client client/python
	This is a port of C++ code into Python. It will need a refactoring to be more "python" and less "C++"

	* python client can send message to FTS

	* python client can receive message from FTS and correct handler is called (see client/python/testClient.py)
	
2002-11-13  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* Fix a race condition in FtsSocketConnection (cpp client)

	* client can receive message from FTS and correct handler is called (see test1.cpp)

2002-11-07  Francois Dechelle  <dechelle@limbe.ircam.fr>
