@@ -186,12 +186,10 @@ fts_patcher_set_dirty(fts_patcher_t *this, int is_dirty)
 }
 
 void
-fts_patcher_set_template(fts_patcher_t *this, fts_template_t *template)
+fts_patcher_set_template( fts_patcher_t *this, fts_template_t *template)
 {
   this->type = fts_p_template;
   this->template = template;
-
-  fts_template_add_instance(template, (fts_object_t *) this);
 }
 
 /*************************************************************
@@ -903,8 +901,8 @@ patcher_stop_waiting(fts_object_t *o, int winlet, fts_symbol_t s, int ac, const 
   fts_client_send_message(o, sym_stopWaiting, 0, 0);
 }
 
-fts_patcher_t *
-get_patcher_by_file_name( fts_symbol_t file_name)
+fts_patcher_t * 
+fts_patcher_get_by_file_name( fts_symbol_t file_name)
 {
   fts_patcher_t *root = fts_get_root_patcher();
   fts_object_t *p = 0;
@@ -929,36 +927,36 @@ patcher_open_help_patch( fts_object_t *o, int winlet, fts_symbol_t s, int ac, co
 {
   fts_object_t *obj = fts_get_object(&at[0]);
   fts_package_t *pkg = fts_object_get_package(obj);
+  fts_symbol_t dir;
+  fts_symbol_t class_name;
+  fts_symbol_t file_name;
+  fts_patcher_t *help_patch;
+  const char *help_name;
+  char path[256];
 
   if( fts_object_is_error( obj) && (pkg == NULL))
     return;
+
+  dir = fts_package_get_dir( pkg);
+  class_name = fts_object_get_class_name(obj);
+
+  help_name = fts_package_get_help( pkg, class_name);
+  if( help_name)
+    snprintf(path, 256, "%s%c%s%c%s", dir, fts_file_separator, "help", fts_file_separator, help_name);
   else
-  {
-    fts_symbol_t dir = fts_package_get_dir( pkg);
-    fts_symbol_t class_name = fts_object_get_class_name(obj);
-    fts_symbol_t file_name;
-    fts_patcher_t *help_patch;
-    const char *help_name;
-    char path[256];
+    snprintf(path, 256, "%s%c%s%c%s%s", dir, fts_file_separator, "help", fts_file_separator, class_name, ".help.jmax");
+  
+  file_name = fts_new_symbol(path);
+      
+  help_patch = fts_patcher_get_by_file_name(file_name);
 
-    help_name = fts_package_get_help( pkg, class_name);
-    if( help_name)
-      snprintf(path, 256, "%s%c%s%c%s", dir, fts_file_separator, "help", fts_file_separator, help_name);
-    else
-      snprintf(path, 256, "%s%c%s%c%s%s", dir, fts_file_separator, "help", fts_file_separator, class_name, ".help.jmax");
+  if(help_patch)
+    patcher_open_editor((fts_object_t *)help_patch, 0, 0, 0, 0);
+  else
+    help_patch = fts_client_load_patcher(file_name, fts_get_client_id(o));
 
-    file_name = fts_new_symbol(path);
-
-    help_patch = get_patcher_by_file_name(file_name);
-
-    if(help_patch)
-      patcher_open_editor((fts_object_t *)help_patch, 0, 0, 0, 0);
-    else
-      help_patch = fts_client_load_patcher(file_name, fts_get_client_id(o));
-
-    if(!help_patch)
-      fts_client_send_message(o, sym_noHelp, 1, at);
-  }
+  if(!help_patch)
+    fts_client_send_message(o, sym_noHelp, 1, at); 
 }
 
 /* find utility */
