@@ -34,7 +34,9 @@ extern fts_patcher_t *fts_patcher_get_scope(fts_patcher_t *patcher);
 
 #define fts_patcher_set_standard(p)      ((p)->type = fts_p_standard)
 #define fts_patcher_set_abstraction(p)   ((p)->type = fts_p_abstraction)
+
 extern void fts_patcher_set_template(fts_patcher_t *patcher, fts_template_t *template);
+
 #define fts_patcher_get_template(p) ((p)->template)
 
 #define fts_patcher_get_file_name(p) ((p)->file_name)
@@ -54,6 +56,6 @@ extern void fts_patcher_remove_object(fts_patcher_t *this, fts_object_t *obj);
 extern int  fts_patcher_get_objects_count( fts_patcher_t *this);
 
 extern void fts_patcher_order_inoutlets_regarding_position(fts_patcher_t *this);
-extern fts_patcher_t *get_patcher_by_file_name( fts_symbol_t file_name);
+extern fts_patcher_t *fts_patcher_get_by_file_name( fts_symbol_t file_name);
 
 #endif
