@@ -42,11 +42,10 @@ struct fts_template {
 extern fts_template_t* fts_template_new(fts_symbol_t name, fts_symbol_t filename, fts_symbol_t original_filename);
 extern void fts_template_redefine(fts_template_t *template, fts_symbol_t filename);
 
+extern fts_object_t *fts_template_make_instance(fts_template_t *template, fts_patcher_t *patcher, int ac, const fts_atom_t *at);
+
 extern void fts_template_add_instance(fts_template_t *template, fts_object_t *object);
 extern void fts_template_remove_instance(fts_template_t *template, fts_object_t *object);
-
-extern fts_object_t *fts_template_new_declared(fts_patcher_t *patcher, int ac, const fts_atom_t *at);
-extern fts_object_t *fts_template_new_search(fts_patcher_t *patcher, int ac, const fts_atom_t *at);
 
 extern void fts_template_file_modified(fts_symbol_t filename);
 
